updated code from week 3

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     padding: 0;
     margin: 0;
     font-family: sans-serif;
@@ -45,10 +45,15 @@ main {
     color:rgb(37, 236, 186);
 }
 
-.product-form {
-    width: 20rem;
-    max-width: 90%;
-    margin: auto;
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
+
+.product__description {
+    text-align: center;
 }
 
 .form-control label,
@@ -80,4 +85,61 @@ button:hover,
 button:active {
     background-color: powderblue;
     color: black;
+}*/
+
+.product-form {
+    width: 20rem;
+    max-width: 90%;
+    margin: auto;
+}
+
+.product-item {
+    width: 20rem;
+    max-width: 95%;
+}
+
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
+}
+
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
+
+.product__description {
+    text-align: center;
+}
+
+.form-control label,
+.form-control input {
+    display: block;
+    width: 100%;
+}
+
+.form-control {
+    margin: 1rem 0;
+}
+
+.form-control input {
+    border: 1px solid rgb(37, 236, 186);
+    font: inherit;
+    border-radius: 2px;
+}
+
+button {
+    font: inherit;
+    border: 1px solid rgb(7, 108, 116);
+    color: rgb(7, 108, 116);;
+    background: white;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+button:hover,
+button:active {
+    background-color:  rgb(12, 136, 145);
+    color: white;
 }
