--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,101 +1,15 @@
-/*body {
-    padding: 0;
-    margin: 0;
-    font-family: sans-serif;
-}
-
-main {
-    padding: 1rem;
-}
-
-.main-header {
-    width: 100%;
-    height: 3.5rem;
-    background-color: rgb(12, 136, 145);
-    padding: 0 1.5rem;
-}
-
-.main-header__nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.main-header__item-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-}
-
-.main-header__item {
-    margin: 0 1rem;
-    padding: 0;
-
-}
-
-.main-header__item a {
-    text-decoration: none;
-    color: white;
-}
-
-.main-header__item a:hover,
-.main-header__item a:active,
-.main-header__item a.active {
-    color:rgb(37, 236, 186);
-}
-
-
-.product__price {
-    text-align: center;
-    color: #4d4d4d;
-    margin-bottom: 0.5rem;
-}
-
-.product__description {
-    text-align: center;
-}
-
-.form-control label,
-.form-control input {
-    display: block;
-    width: 100%;
-}
-
-.form-control {
-    margin: 1rem 0;
-}
-
-.form-control input {
-    border: 1px solid rgb(37, 236, 186);
-    font: inherit;
-    border-radius: 2px;
-}
-
-button {
-    font: inherit;
-    border: 1px solid rgb(7, 108, 116);
-    color: rgb(7, 108, 116);;
-    background: white;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-button:hover,
-button:active {
-    background-color: powderblue;
-    color: black;
-}*/
 
 .product-form {
     width: 20rem;
     max-width: 90%;
     margin: auto;
+    display: block;
 }
 
 .product-item {
     width: 20rem;
     max-width: 95%;
+    margin: 1rem;
 }
 
 .product__title {
@@ -112,7 +26,7 @@ button:active {
 .product__description {
     text-align: center;
 }
-
+/*
 .form-control label,
 .form-control input {
     display: block;
@@ -142,4 +56,4 @@ button:hover,
 button:active {
     background-color:  rgb(12, 136, 145);
     color: white;
-}
+}*/
