--- a/public/css/product.css
+++ b/public/css/product.css
@@ -26,3 +26,34 @@
 .product__description {
     text-align: center;
 }
+/*
+.form-control label,
+.form-control input {
+    display: block;
+    width: 100%;
+}
+
+.form-control {
+    margin: 1rem 0;
+}
+
+.form-control input {
+    border: 1px solid rgb(37, 236, 186);
+    font: inherit;
+    border-radius: 2px;
+}
+
+button {
+    font: inherit;
+    border: 1px solid rgb(7, 108, 116);
+    color: rgb(7, 108, 116);;
+    background: white;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+button:hover,
+button:active {
+    background-color:  rgb(12, 136, 145);
+    color: white;
+}*/
