--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -26,7 +26,7 @@
                 <textarea type="text" name="description" rows="5" id="description"><% if (editing) { %><%= product.description %><% } %></textarea>
             </div>
             <% if (editing) { %>
-                <input type="hidden" value="<%= product.id %>" name="productId">
+                <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
             
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
