--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -23,6 +23,7 @@
                         <p class="product_description"><%= product.description %></p>
                     </div>
                     <div class="card_actions">
+                        <a href="/products/<%= product._id %>" class="btn">Details</a>
                         <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                     </div>
                 </article>
