--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -24,8 +24,10 @@
                     </div>
                     <div class="card_actions">
                         <a href="/products/<%= product._id %>" class="btn">Details</a>
-                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
-                    </div>
+                        <% if (isAuthenticated) { %>
+                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                        <% } %>
+                        </div>
                 </article>
                 <% } %>
         </div>
