--- a/public/css/main.css
+++ b/public/css/main.css
@@ -224,6 +224,22 @@ img {
   width: 100%;
 }
 
+.user-message {
+  margin: auto;
+  width: 90%;
+  border: 1px solid rgb(90, 90, 214);
+  padding: .5rem;
+  border-radius: 3px;
+  background: blanchedalmond;
+  text-align: center;
+
+}
+
+.user-message--error {
+  border-color: red;
+  background: rgb(243, 189, 189);
+  color: red;
+}
 
 @media (min-width: 768px) {
   .main-header__nav {
@@ -232,5 +248,9 @@ img {
 
   #side-menu-toggle {
     display: none;
+  }
+
+  .user-message {
+    width: 30rem;
   }
 }
