--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -1,35 +1,37 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/forms.css">
-    <!--load auth.css file-->
     <link rel="stylesheet" href="/css/auth.css">
 </head>
 
 <body>
-    <%- include('../includes/navigation.ejs') %>
-
+   <%- include('../includes/navigation.ejs') %>
 
     <main>
+        
         <% if (errorMessage) { %>
+            <!--output error message-->
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <!--creates a login form-->
-        <form class="login-form" action="/login" method="POST">
-            <!--enter email form-->
+        <form class="login-form" action="/signup" method="POST">
+            <!--email field-->
             <div class="form-control">
                 <label for="email">E-Mail</label>
                 <input type="email" name="email" id="email">
             </div>
-            <!--enter password form-->
+            <!--password field-->
             <div class="form-control">
                 <label for="password">Password</label>
                 <input type="password" name="password" id="password">
             </div>
+            <!--confirm password field-->
+            <div class="form-control">
+                <label for="confirmPassword">Confirm Password</label>
+                <input type="password" name="confirmPassword" id="confirmPassword">
+            </div>
+            <!-- hidden input -->
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <!--create login button-->
-            <button class="btn" type="submit">Login</button>
+            <!--signup button-->
+            <button class="btn" type="submit">Signup</button>
         </form>
-        <div class="centered">
-            <a href="/reset">Reset Password</a>
-        </div>
     </main>
-    <%- include ('../includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
