--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -2,6 +2,7 @@
     margin: 1rem 0;
 }
 
+/* form display */
 .form-control label,
 .form-control input,
 .form-control textarea {
@@ -10,6 +11,7 @@
     margin-bottom: 0.25rem;
 }
 
+/* style for input fields */
 .form-control input,
 .form-control textarea {
     border: 1px solid #a1a1a1;
@@ -17,7 +19,14 @@
     border-radius: 2px;
 }
 
+/* style for field outline when selected */
 .form-control input:focus,
 .form-control textarea:focus {
     outline-color: #00695c;
+}
+
+/*style for invalid input or textarea*/
+.form-control input.invalid,
+.form-control textarea.invalid {
+    border-color: red;
 }
