--- a/views/404.ejs
+++ b/views/404.ejs
@@ -2,7 +2,9 @@
 </head>
 
 <body>
+    <!--navigation-->
     <%- include('includes/navigation.ejs') %>
+    <!--page not found header-->
     <h1>Page Not Found!</h1>
 
 <%- include('includes/end.ejs') %>
