--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,35 +1,37 @@
 <%- include('../includes/head.ejs') %>
-    
+    <!--import css-->
     <link rel="stylesheet" href="/css/product.css">
    
 </head>
 <body>
+    <!--navigation-->
     <%- include('../includes/navigation.ejs') %>
+    <main>
+        <!--display products-->
         <% if (prods.length > 0) { %>
-        <!--<h1>My Products</h1>
-        <p>List of products...</p>-->
         <div class="grid">
             <% for (let product of prods) { %>
                 <article class="card product-items">
                     <header class="card_header">
+                        <!--product title-->
                         <h1 class="product_title"><%= product.title %></h1>
                     </header>
+                    <!--product image-->
                     <div class="card_image">
-                        <!--<img src="../img/book.jpg"/>-->
-                        <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
+                        <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                     </div>
+                    <!--product price and description-->
                     <div class="card_content">
                         <h2 class="product_price">$<%= product.price %></h2>
                         <p class="product_description"><%= product.description %></p>
                     </div>
                     <div class="card_actions">
+                        <!--edit button-->
                         <a href="/admin/edit-product/<%= product._id %>?edit=true"  class="btn">Edit</a>
-                        <form action="/admin/delete-product" method="POST">
-                            <input type="hidden" value="<%= product._id %>" name="productId">
-                            <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-                            <button class="btn" type="submit">Delete</button>
-                        </form>
-
+                        <input type="hidden" value="<%= product._id %>" name="productId">
+                        <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                        <!--delete button-->
+                        <button class="btn" type="button" onclick="deleteProduct(this)">Delete</button>
                     </div>
                 </article>
                 <% } %>
@@ -38,4 +40,6 @@
             <h1>No Products Found</h1>
         <% } %>    
     </main>
+    <!--footer-->
     <%- include ('../includes/end.ejs') %>
+    <script src="/js/admin.js"></script>
