--- a/views/auth/new-password.ejs
+++ b/views/auth/new-password.ejs
@@ -1,14 +1,15 @@
 <%- include('../includes/head.ejs') %>
+<!--import css-->
     <link rel="stylesheet" href="/css/forms.css">
     <!--load auth.css file-->
     <link rel="stylesheet" href="/css/auth.css">
 </head>
 
 <body>
+    <!--navigation-->
     <%- include('../includes/navigation.ejs') %>
-
-
     <main>
+        <!--display error message if there is one-->
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
@@ -26,4 +27,5 @@
             <button class="btn" type="submit">Update Password</button>
         </form>
     </main>
+    <!--footer-->
     <%- include ('../includes/end.ejs') %>
