--- a/views/includes/add-to-cart.ejs
+++ b/views/includes/add-to-cart.ejs
@@ -1,3 +1,4 @@
+<!--add to cart code-->
 <form action="/cart" method="POST">
     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <button class="btn" type="submit">Add to Cart</button>
