--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,4 +1,4 @@
-
+/*product form styles*/
 .product-form {
     width: 20rem;
     max-width: 90%;
@@ -6,54 +6,27 @@
     display: block;
 }
 
+/*styles for product item when displayed*/
 .product-item {
     width: 20rem;
     max-width: 95%;
     margin: 1rem;
 }
 
-.product__title {
+/*styles for product title when displayed*/
+.product_title {
     font-size: 1.2rem;
     text-align: center;
 }
 
-.product__price {
+/*styles for product price when displayed*/
+.product_price {
     text-align: center;
     color: #4d4d4d;
     margin-bottom: 0.5rem;
 }
 
-.product__description {
+/*styles for product description when displayed*/
+.product_description {
     text-align: center;
 }
-/*
-.form-control label,
-.form-control input {
-    display: block;
-    width: 100%;
-}
-
-.form-control {
-    margin: 1rem 0;
-}
-
-.form-control input {
-    border: 1px solid rgb(37, 236, 186);
-    font: inherit;
-    border-radius: 2px;
-}
-
-button {
-    font: inherit;
-    border: 1px solid rgb(7, 108, 116);
-    color: rgb(7, 108, 116);;
-    background: white;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-button:hover,
-button:active {
-    background-color:  rgb(12, 136, 145);
-    color: white;
-}*/
