--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,4 +1,5 @@
 <%- include('../includes/head.ejs') %>
+<!--import css-->
     <link rel="stylesheet" href="/css/forms.css">
     <!--load auth.css file-->
     <link rel="stylesheet" href="/css/auth.css">
@@ -42,4 +43,5 @@
             <a href="/reset">Reset Password</a>
         </div>
     </main>
+    <!--footer-->
     <%- include ('../includes/end.ejs') %>
