--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!--head code to be used again-->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
