--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,23 +1,27 @@
 <%- include('../includes/head.ejs') %>
-    
+    <!--load css-->
     <link rel="stylesheet" href="/css/orders.css">
    
 </head>
 
 <body>
+    <!--navigation-->
     <%- include('../includes/navigation.ejs') %>
     <main>
+        <!--if no orders-->
         <% if (orders.length <= 0) { %>
             <h1>Nothing there</h1>
         <% } else { %>
             <ul class="orders">
+                <!--show orders-->
                 <% orders.forEach(order => { %>
                     <li class="orders__item">
-                        <h1>Order - # <%= order._id %></h1>
+                        <!-- add invoice link -->
+                        <h1>Order - # <%= order._id %> - <a href="/orders/<%= order._id %>">Invoice</a></h1>
                         <ul class="orders__products">
                             <% order.products.forEach(p => { %>
                             <li class="orders__products-item">
-                                <%= p.product.title %> (<%= p.quantity %>)
+                                <%= p.product.title %> (<%= p.quantity %>) 
                             </li>
                             <% }); %>
                         </ul>
