--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,38 +1,44 @@
 <%- include('../includes/head.ejs') %>
-    
+    <!--load css-->
     <link rel="stylesheet" href="/css/product.css">
    
 </head>
 <body>
+    <!--navigation-->
     <%- include('../includes/navigation.ejs') %>
-        <% if (prods.length > 0) { %>
-        <!--<h1>My Products</h1>
-        <p>List of products...</p>-->
-        <div class="grid">
-            <% for (let product of prods) { %>
-                <article class="card product-items">
-                    <header class="card_header">
-                        <h1 class="product_title"><%= product.title %></h1>
-                    </header>
-                    <div class="card_image">
-                        <!--<img src="../img/book.jpg"/>-->
-                        <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
-                    </div>
-                    <div class="card_content">
-                        <h2 class="product_price">$<%= product.price %></h2>
-                        <p class="product_description"><%= product.description %></p>
-                    </div>
-                    <div class="card_actions">
-                        <a href="/products/<%= product._id %>" class="btn">Details</a>
-                        <% if (isAuthenticated) { %>
-                            <%- include('../includes/add-to-cart.ejs', {product: product}) %>
-                        <% } %>
+        <main>
+            <!--show products-->
+            <% if (prods.length > 0) { %>
+            <div class="grid">
+                <% for (let product of prods) { %>
+                    <article class="card product-items">
+                        <header class="card_header">
+                            <!--show product title-->
+                            <h1 class="product_title"><%= product.title %></h1>
+                        </header>
+                        <!--show product image-->
+                        <div class="card_image">
+                            <img src="/<%= product.imageUrl %>" alt="<%= product.title %>">
                         </div>
-                </article>
-                <% } %>
-        </div>
-        <% } else { %>
-            <h1>No Products Found</h1>
-        <% } %>    
+                        <!--show product price and description-->
+                        <div class="card_content">
+                            <h2 class="product_price">$<%= product.price %></h2>
+                            <p class="product_description"><%= product.description %></p>
+                        </div>
+                        <div class="card_actions">
+                            <a href="/products/<%= product._id %>" class="btn">Details</a>
+                            <!--only show if logged in-->
+                            <% if (isAuthenticated) { %>
+                                <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                            <% } %>
+                            </div>
+                    </article>
+                    <% } %>
+            </div>
+            <!-- include pagnation -->
+            <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage: previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage}) %>
+            <% } else { %>
+                <h1>No Products Found</h1>
+            <% } %>    
     </main>
     <%- include ('../includes/end.ejs') %>
